RESOLVED FIXED184412
[Win][WebKit] Fix forwarding headers for Windows build
https://bugs.webkit.org/show_bug.cgi?id=184412
Summary [Win][WebKit] Fix forwarding headers for Windows build
Fujii Hironori
Reported 2018-04-09 00:44:25 PDT
[Win][WebKit] Use WEBKIT_CREATE_FORWARDING_HEADERS instead of WEBKIT_MAKE_FORWARDING_HEADERS Forwarding headers are duplicately included in WebKit on Windows because forwarding headers are created by simple copying headers and substantial parts of WebKit are using #include <WebKit/Foo.h> instead of #include "Foo.h" inside WebKit. WEBKIT_MAKE_FORWARDING_HEADERS simply copies headers. WEBKIT_CREATE_FORWARDING_HEADERS creates forwarding headers.
Attachments
Patch (5.39 KB, patch)
2018-04-09 00:48 PDT, Fujii Hironori
no flags
Patch (4.73 KB, patch)
2018-05-04 15:06 PDT, Don Olmstead
no flags
Patch (4.76 KB, patch)
2018-05-04 15:32 PDT, Don Olmstead
no flags
Fujii Hironori
Comment 1 2018-04-09 00:48:36 PDT
Don Olmstead
Comment 2 2018-04-10 13:38:55 PDT
I disagree with this change. Copies work fine its just we're copying too much.
Fujii Hironori
Comment 3 2018-04-10 17:32:46 PDT
Can you show a patch?
Don Olmstead
Comment 4 2018-05-04 15:06:44 PDT
EWS Watchlist
Comment 5 2018-05-04 15:09:35 PDT
Attachment 339601 [details] did not pass style-queue: ERROR: Source/WebCore/PlatformWin.cmake:133: Alphabetical sorting problem. "crypto" should be before "css". [list/order] [5] ERROR: Source/WebKit/UIProcess/API/C/WKProcessTerminationReason.h:26: Use #pragma once instead of #ifndef for header guard. [build/header_guard] [5] ERROR: Source/WebKit/UIProcess/API/APIContextMenuClient.h:33: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 3 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Don Olmstead
Comment 6 2018-05-04 15:09:44 PDT
Comment on attachment 339601 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=339601&action=review This gets WinCairo for WebKit compiled with the forwarding headers as copies. How headers should be included is probably a larger mailing list discussion. > Source/WebKit/PlatformWin.cmake:-201 > - Part of the problem was there are too many headers being copied. First step was to get rid of everything except the C API bits which have the WK* headers. > Source/WebKit/UIProcess/API/APIAttachment.h:30 > +#include "WebPageProxy.h" Another issue is that things outside the C API were including using <WebKit/ All instances of that have been removed in this patch. > Source/WebKit/UIProcess/API/C/WKProcessTerminationReason.h:27 > +#define WKProcessTerminationReason_h Also it seems like everything in the C API should be using include guards.
Don Olmstead
Comment 7 2018-05-04 15:32:33 PDT
Created attachment 339602 [details] Patch Make style checker happy
EWS Watchlist
Comment 8 2018-05-04 15:33:34 PDT
Attachment 339602 [details] did not pass style-queue: ERROR: Source/WebKit/UIProcess/API/C/WKProcessTerminationReason.h:26: Use #pragma once instead of #ifndef for header guard. [build/header_guard] [5] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 9 2018-05-04 16:29:09 PDT
Comment on attachment 339602 [details] Patch Clearing flags on attachment: 339602 Committed r231387: <https://trac.webkit.org/changeset/231387>
WebKit Commit Bot
Comment 10 2018-05-04 16:29:10 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11 2018-05-04 16:30:27 PDT
Note You need to log in before you can comment on or make changes to this bug.