[Win][WebKit] Fix forwarding headers for Windows build https://bugs.webkit.org/show_bug.cgi?id=184412

Reviewed by Alex Christensen.

Source/WebCore:

No new tests. No change in behavior.

* PlatformWin.cmake:

Source/WebKit:

* PlatformWin.cmake:
* UIProcess/API/APIAttachment.h:
* UIProcess/API/APIContextMenuClient.h:
* UIProcess/API/C/WKProcessTerminationReason.h:
* WebProcess/InjectedBundle/API/c/WKBundlePageOverlay.cpp:


Canonical link: https://commits.webkit.org/200820@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231387 268f45cc-cd09-0410-ab3c-d52691b4dbfc