Source/WebKit/UIProcess/API/APIContextMenuClient.h
@@ -27,10 +27,10 @@
 
 #if ENABLE(CONTEXT_MENUS)
 
+#include "WKBase.h"
 #include "WebContextMenuItem.h"
 #include "WebContextMenuListenerProxy.h"
 #include "WebHitTestResultData.h"
-#include <WebKit/WKBase.h>
 #include <wtf/CompletionHandler.h>
 #include <wtf/Forward.h>
 #include <wtf/RefPtr.h>
